--- a/src/SD.AOP.LogSite/SD.AOP.LogSite.csproj
+++ b/src/SD.AOP.LogSite/SD.AOP.LogSite.csproj
@@ -35,6 +35,7 @@
     <RestorePackages>true</RestorePackages>
     <UseGlobalApplicationHostFile />
     <TargetFrameworkProfile />
+    <Use64BitIISExpress />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -599,9 +600,9 @@
     <Content Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\SD.AOP.Core\SD.AOP.Core.csproj">
+    <ProjectReference Include="..\SD.AOP.PostSharp\SD.AOP.PostSharp.csproj">
       <Project>{dbb8d1a5-231c-49c8-9a6a-f2d137d5396f}</Project>
-      <Name>SD.AOP.Core</Name>
+      <Name>SD.AOP.PostSharp</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
