--- a/tests/SD.AOP.Core.Tests/packages.config
+++ b/tests/SD.AOP.Core.Tests/packages.config
@@ -1,4 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="PostSharp" version="4.1.15" targetFramework="net45" />
+  <package id="MrAdvice" version="2.5.24" targetFramework="net461" />
+  <package id="MSTest.TestAdapter" version="1.2.0" targetFramework="net461" />
+  <package id="MSTest.TestFramework" version="1.2.0" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
+  <package id="System.Configuration.ConfigurationManager" version="4.4.1" targetFramework="net461" />
+  <package id="System.Data.SqlClient" version="4.4.3" targetFramework="net461" />
 </packages>
