--- a/tests/SD.AOP.PostSharp.Tests/App.config
+++ b/tests/SD.AOP.PostSharp.Tests/App.config
@@ -11,15 +11,6 @@
   <!--连接字符串-->
   <connectionStrings>
     <!--日志连接字符串-->
-    <add name="LogConnection" connectionString="Data Source=.;Initial Catalog=RemoteDB;User Id=sa;Password=realgoal123!;"/>
+    <add name="LogConnection" connectionString="Data Source=.;Initial Catalog=RemoteDB;User Id=sa;Password=realgoal123!;" providerName="" />
   </connectionStrings>
-
-  <runtime>
-    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-      <dependentAssembly>
-        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-11.0.0.0" newVersion="11.0.0.0" />
-      </dependentAssembly>
-    </assemblyBinding>
-  </runtime>
 </configuration>
