--- a/src/SD.AOP.Core/SD.AOP.Core.csproj
+++ b/src/SD.AOP.Core/SD.AOP.Core.csproj
@@ -4,11 +4,14 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>SD.AOP.Core</AssemblyName>
     <RootNamespace>SD.AOP.Core</RootNamespace>
-    <Version>2.0.0</Version>
+    <Version>2.0.1</Version>
     <Authors>Lee</Authors>
     <Company>SD</Company>
     <Description>AOP组件</Description>
     <Copyright>Copyright © SD 2018</Copyright>
+    <AssemblyVersion>2.0.0.0</AssemblyVersion>
+    <FileVersion>2.0.0.0</FileVersion>
+    <PackageReleaseNotes>记录日志改为同步方法，异步方法运行时偶尔出现问题</PackageReleaseNotes>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
