--- a/src/SD.AOP.LogSite.NetFx/packages.config
+++ b/src/SD.AOP.LogSite.NetFx/packages.config
@@ -1,18 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AutoMapper" version="6.2.2" targetFramework="net45" />
+  <package id="AutoMapper" version="8.1.1" targetFramework="net461" />
   <package id="EasyUI" version="1.4.5" targetFramework="net45" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net45" />
   <package id="jQuery" version="1.12.4" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Mvc" version="5.2.4" targetFramework="net461" />
-  <package id="Microsoft.AspNet.Razor" version="3.2.4" targetFramework="net461" />
-  <package id="Microsoft.AspNet.WebPages" version="3.2.4" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
-  <package id="SD.Common" version="1.0.6" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net461" />
+  <package id="SD.Common" version="2.0.4" targetFramework="net461" />
   <package id="SD.FormatModel.EasyUI" version="1.0.0" targetFramework="net45" />
-  <package id="SD.Infrastructure" version="1.1.3" targetFramework="net45" />
-  <package id="SD.Infrastructure.MVC" version="1.0.4" targetFramework="net45" />
+  <package id="SD.Infrastructure" version="2.1.1" targetFramework="net461" />
+  <package id="SD.Infrastructure.MVC" version="1.0.5" targetFramework="net461" />
   <package id="SD.JavascriptToolkits" version="1.0.0" targetFramework="net45" />
-  <package id="SD.Toolkits.Recursion" version="1.0.5" targetFramework="net45" />
+  <package id="SD.Toolkits.Recursion" version="2.0.0" targetFramework="net461" />
+  <package id="System.Data.SqlClient" version="4.6.1" targetFramework="net461" />
 </packages>
