--- a/src/SD.AOP.LogViewer.Repository.SqlServer/SD.AOP.LogViewer.Repository.SqlServer.csproj
+++ b/src/SD.AOP.LogViewer.Repository.SqlServer/SD.AOP.LogViewer.Repository.SqlServer.csproj
@@ -1,9 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net461</TargetFramework>
+    <TargetFrameworks>net461;netstandard2.0</TargetFrameworks>
   </PropertyGroup>
 
-  <ItemGroup>
+  <ItemGroup Condition="'$(TargetFramework)' == 'net461'">
+    <PackageReference Include="SD.Infrastructure" Version="3.0.3" />
+  </ItemGroup>
+
+  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
+    <PackageReference Include="System.Data.SqlClient" Version="4.7.0" />
     <PackageReference Include="SD.Infrastructure" Version="3.0.3" />
   </ItemGroup>
 
