--- a/src/SD.AOP.LogViewer.Repository/SD.AOP.LogViewer.Repository.csproj
+++ b/src/SD.AOP.LogViewer.Repository/SD.AOP.LogViewer.Repository.csproj
@@ -1,11 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>net461;netstandard2.0</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\SD.AOP.Core\SD.AOP.Core.csproj" />
   </ItemGroup>
-
 </Project>
