--- a/src/SD.AOP.Logger.PostgreSQL/SD.AOP.Logger.PostgreSQL.csproj
+++ b/src/SD.AOP.Logger.PostgreSQL/SD.AOP.Logger.PostgreSQL.csproj
@@ -17,6 +17,10 @@
     <Reference Include="System.Configuration" />
   </ItemGroup>
 
+  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.7.0" />
+  </ItemGroup>
+
   <ItemGroup>
     <PackageReference Include="SD.Toolkits.Sql" Version="1.0.3" />
     <PackageReference Include="SD.Toolkits.Sql.PostgreSQL" Version="1.0.2" />
